--- a/client/src/app/components/layout/settings/settings-page/settings-page.component.scss
+++ b/client/src/app/components/layout/settings/settings-page/settings-page.component.scss
@@ -43,6 +43,43 @@
 .panel.menu {
     width: 20%;
     min-width: 170px;
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+@media screen and (max-width: 500px) {
+    .menu.panel {
+        min-width: 140px;
+    }
+}
+
+.tab {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 8px 10px;
+    border-radius: 10px;
+
+    transition: background-color 0.2s;
+}
+
+.tab:hover {
+    background-color: rgba(255, 255, 255, 0.05);
+    cursor: pointer;
+}
+
+.tab.selected {
+    background-color: $button-active-color;
+}
+
+.tab p {
+    font-family: $main-font;
+    font-weight: 600;
+    font-size: 15px;
+    padding: 0;
+    margin: 0;
+    text-align: left;
 }
 
 .panel.main {
@@ -211,8 +248,3 @@ app-solid-selector {
     font-size: 30px;
 }
 
-@media screen and (max-width: 500px) {
-    .menu.panel {
-        display: none;
-    }
-}
