--- a/client/src/app/components/layout/settings/settings-page/settings-page.component.scss
+++ b/client/src/app/components/layout/settings/settings-page/settings-page.component.scss
@@ -138,6 +138,73 @@
     align-items: center;
 }
 
+.paragraph-setting {
+    display: flex;
+    flex-direction: column;
+}
+
+.paragraph-setting textarea {
+    width: 100%;
+    height: 150px;
+    box-sizing: border-box;
+
+    font-family: $main-font;
+    font-size: 12px;
+    font-weight: 500;
+    color: white;
+    background: $dark-color;
+
+    border: none;
+    outline: none;
+    padding: 10px;
+    margin: 0;
+    border-radius: 5px;
+    resize: none;
+
+    transition: color 0.5s;
+}
+
+.paragraph-setting textarea:hover:not(:focus) {
+    cursor: pointer;
+}
+
+.paragraph-setting textarea:focus {
+    outline: 0.5px solid rgba(255, 255, 255, 0.5);
+    //box-shadow: none;
+}
+
+.paragraph-setting textarea::placeholder {
+    color: white;
+    font-family: $main-font;
+    opacity: 0.7;
+    font-size: 11px;
+}
+
+.paragraph-setting .textarea-container {
+    position: relative;
+}
+
+.paragraph-setting .textarea-container p.max-chars {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-weight: 500;
+    opacity: 0.7;
+    transition: color 0.5s;
+}
+
+.paragraph-setting .textarea-container.red p.max-chars {
+    color: $ui-red-color;
+}
+
+.paragraph-setting .textarea-container.red textarea {
+    outline: 0.5px solid $ui-red-color;
+}
+
+.paragraph-setting textarea:not(:focus) ~ p.max-chars {
+    display: none;
+}
+
 app-solid-selector {
     height: 30px;
     z-index: 1;
