--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,10 +1,13 @@
-<router-outlet></router-outlet>
+<ng-container *ngIf="launchService.launch$ | async">
+    <router-outlet></router-outlet>
 
-<notifier-container />
-<app-video-capture />
-<app-modal-container />
-<app-alert-container />
-<app-tooltip />
+    <notifier-container />
+    <app-video-capture />
+    <app-modal-container />
+    <app-alert-container />
+    <app-tooltip />
+</ng-container>
+
 
 
 <app-launch-page *ngIf="launchService.show$ | async" />
