--- a/client/src/app/components/layout/play/play-page/play-page.component.html
+++ b/client/src/app/components/layout/play/play-page/play-page.component.html
@@ -1,5 +1,5 @@
 <div class="main" *ngIf="me$ | async as me">
-    <h1 class="header">Welcome back, {{me.username}}!</h1>
+    <h1 class="header">Welcome, {{me.username}}!</h1>
 
     <section class="profile">
         <div class="league-container">
