--- a/client/src/app/components/layout/friends/friend-element/friend-element.component.html
+++ b/client/src/app/components/layout/friends/friend-element/friend-element.component.html
@@ -18,7 +18,7 @@
 
             <app-solid-button icon="./assets/img/button-icons/eye.svg" [color]="ButtonColor.GREY" tooltipDirection="right"
                 [disabled]="!(friendInfo.activity ? spectateActivities[friendInfo.activity].canSpectate : false)"
-                [tooltip]="friendInfo.activity ? spectateActivities[friendInfo.activity].tooltip : noActivityTooltip"
+                [tooltip]="friendInfo.isOnline ? (friendInfo.activity ? spectateActivities[friendInfo.activity].tooltip : noActivityTooltip) : notOnlineTooltip"
                 [action]="spectate.bind(this)"
             />
 
