--- a/client/src/app/components/layout/room/multiplayer-room/multiplayer-room.component.html
+++ b/client/src/app/components/layout/room/multiplayer-room/multiplayer-room.component.html
@@ -13,6 +13,7 @@
                     [level]="state.status === MultiplayerRoomStatus.BEFORE_GAME ? state.startLevel : myData.level"
                     [lines]="myData.lines"
                     [score]="myData.score"
+                    [opponentScore]="(multiplayerClientRoom.getPlayerScore(otherIndex(playerIndex)) | async) ?? 0"
                     [trt]="myData.trt"
                     [drought]="myData.drought"
                     [countdown]="showBoardText(state, playerIndex, ocrStatus$ | async) ?? myData.countdown"
@@ -46,6 +47,7 @@
                     [level]="state.status === MultiplayerRoomStatus.BEFORE_GAME ? state.startLevel : playerData.level"
                     [lines]="playerData.lines"
                     [score]="playerData.score"
+                    [opponentScore]="(multiplayerClientRoom.getPlayerScore(otherIndex(playerIndex)) | async) ?? 0"
                     [trt]="playerData.tetrisRate"
                     [drought]="playerData.droughtCount"
                     [countdown]="showBoardText(state, playerIndex) ?? (playerData.countdown === COUNTDOWN_LINECAP_REACHED ? COUNTDOWN_LINECAP_REACHED : 0)"
