improvements to ocr topout detection, and store score in server during limbo

--- a/client/src/app/components/modals/profile-modal/profile-modal.component.scss
+++ b/client/src/app/components/modals/profile-modal/profile-modal.component.scss
@@ -213,7 +213,7 @@ app-quest {
     border-radius: 10px;
 
     color: $ranked-color;
-    border:  solid 2px $ranked-color;
+    //border:  solid 2px $ranked-color;
     background-color: adjust-color($color: $ranked-color, $alpha: -0.97);
 }
 
