--- a/client/src/app/components/modals/profile-modal/profile-modal.component.scss
+++ b/client/src/app/components/modals/profile-modal/profile-modal.component.scss
@@ -60,7 +60,7 @@
 }
 
 .profile.panel {
-    border-width: 2px;
+    border-width: 1.5px;
     border-style: solid;
     padding: 10px 10px;
     display: flex;
@@ -180,6 +180,19 @@ app-quest {
     gap: 10px;
 }
 
+
+.about-me-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 7px;
+}
+
+.about-me-header img {
+    display: block;
+    cursor: pointer;
+}
+
 .about-me-panel h1 {
     font-family: $main-font;
     font-size: 16px;
@@ -213,8 +226,55 @@ app-quest {
     border-radius: 10px;
 
     color: $ranked-color;
-    //border:  solid 2px $ranked-color;
+    border:  solid 1.5px $ranked-color;
     background-color: adjust-color($color: $ranked-color, $alpha: -0.97);
+    //background-color: rgba(255, 255, 255, 0.02);;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.ranked-stats-panel h1 {
+    font-family: $main-font;
+    font-weight: 600;
+    font-size: 12px;
+    color: $ranked-color;
+    margin: 0;
+    padding: 0;
+}
+
+.ranked-stats {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    align-items: center;
+}
+
+.ranked-stat {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.ranked-stat h2 {
+    font-family: $main-font;
+    font-weight: 700;
+    font-size: 22px;
+    color: $ranked-color;
+    margin: 0;
+    padding: 0;
+}
+
+.ranked-stat p {
+    font-family: $main-font;
+    font-weight: 400;
+    font-size: 10px;
+    color: $ranked-color;
+    margin: 0;
+    padding: 0;
 }
 
 .stats-panels {
@@ -233,7 +293,7 @@ app-quest {
     box-sizing: border-box;
     height: 50px;
     border-radius: 10px;
-    border: solid 1px;
+    border: solid 1.5px;
 
     display: flex;
     flex-direction: row;
