dont show null in about me

--- a/client/src/app/components/modals/profile-modal/profile-modal.component.html
+++ b/client/src/app/components/modals/profile-modal/profile-modal.component.html
@@ -25,7 +25,7 @@
                 </div>
                 
                 <div class="about-me-content">
-                    <p>{{data.dbUser.about_me}}</p>
+                    <p>{{data.dbUser.about_me === 'NULL' ? '' : data.dbUser.about_me}}</p>
                 </div>
             </div>
             <div class="ranked-stats-panel">
