--- a/client/src/app/components/tv/tv-room/tv-room.component.html
+++ b/client/src/app/components/tv/tv-room/tv-room.component.html
@@ -8,6 +8,7 @@
             [level]="state.status === MultiplayerRoomStatus.BEFORE_GAME ? state.startLevel : playerData.level"
             [lines]="playerData.lines"
             [score]="playerData.score"
+            [opponentScore]="(multiplayerClientRoom.getPlayerScore(otherIndex(playerIndex)) | async) ?? 0"
             [trt]="playerData.tetrisRate"
             [drought]="playerData.droughtCount"
             [countdown]="showBoardText(state, playerIndex) ?? playerData.countdown"
