--- a/client/src/app/components/layout/root/sidebar-tab/sidebar-tab.component.html
+++ b/client/src/app/components/layout/root/sidebar-tab/sidebar-tab.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="'/' + tab" routerLinkActive="selected" (click)="onTabClick()" appClickSound>
+<a [routerLink]="'/' + tab" routerLinkActive="selected" (click)="onTabClick()">
     <div class="tab" [class.badge]="(badgeService.isBadgeActive$(tab) | async)">
 
         <div class="tab-left">
