--- a/client/src/app/components/ui/modal-container/modal-container.component.html
+++ b/client/src/app/components/ui/modal-container/modal-container.component.html
@@ -6,5 +6,6 @@
         <app-quest-list-modal *ngIf="modal === ModalType.QUEST_LIST" [config]="modalManager.getModalConfig()" />
         <app-profile-modal *ngIf="modal === ModalType.PROFILE" [config]="modalManager.getModalConfig()" />
         <app-select-starting-trophies-modal *ngIf="modal === ModalType.SELECT_STARTING_TROPHIES" />
+        <app-generate-puzzles-modal *ngIf="modal === ModalType.GENERATE_PUZZLES" />
     </app-modal>
 </div>
