--- a/client/src/app/components/modals/generate-puzzles-modal/generate-puzzles-modal.component.html
+++ b/client/src/app/components/modals/generate-puzzles-modal/generate-puzzles-modal.component.html
@@ -1,9 +1,28 @@
-<div class="modal">
+<div class="modal" *ngIf="this.state$ | async as state">
 
     <h1>Review Placements</h1>
 
-    <h2>Analyze and retry dubious placements made in the game. We're sifting through each placement and are finding
-        placements we'd think you'd like to revisit, in the form of puzzles!
+    <h2>Analyze and retry dubious placements made in the game. Hold tight as we sift through the game and find
+        placements we'd think you would like to revisit, in the form of puzzles!
     </h2>
+
+    <div class="content">
+
+        <div class="loading" *ngIf="state.placementsProcessed < state.totalPlacements">
+            <app-rabbit-loading-animation width="150px" />
+
+            <div class="loading-bar">
+                <div class="progress" [ngStyle]="{'width' : (state.placementsProcessed / state.totalPlacements) * 100 + '%'}"></div>
+            </div>
+            <p>Analyzing placement {{state.placementsProcessed}} of {{state.totalPlacements}}...</p>
+        </div>
+
+    </div>
+
+
+    <div class="buttons">
+        <app-solid-button label="Cancel" [color]="ButtonColor.GREY" (smartClick)="hide()" />
+        <app-solid-button label="Go!" [color]="ButtonColor.GREEN" [disabled]="state.placementsProcessed < state.totalPlacements" (smartClick)="go()" />
+    </div>
 
 </div>
