fix screen jitter ranked

--- a/client/src/app/components/nes-layout/layouts/layout-one/layout-one.component.scss
+++ b/client/src/app/components/nes-layout/layouts/layout-one/layout-one.component.scss
@@ -22,7 +22,7 @@ app-eval-bar {
 }
 
 .score-panel {
-    width: 100%; // stretch to take same width as level and lines panels combined
+    width: 238px;
     box-sizing: border-box;
 }
 
